[project]
name = "krkr-sprite-synth"
version = "0.1.2"
description = "A library for synthesizing character sprites for galgame games using the krkr engine"
authors = [
    {name = "zhaomaoniu", email = "2667292003@qq.com"},
]
dependencies = ["Pillow>=10.4.0"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
